terraform_files/private_vm.tf

resource "google_compute_instance" "private-instance" {
  name         = "private-instance"
  machine_type = "e2-small"
  zone         = "us-central1-a"
  

   boot_disk {

    initialize_params {
      image = "debian-cloud/debian-11"
      labels = {
        my_label = "value"
      }
    }
  }


  network_interface {
    network = google_compute_network.myvpc.name
    subnetwork = google_compute_subnetwork.management-subnet.name
  }

  
}
